// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Sizes applies large correctly if provided 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar c-avatar--large fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  size="large"
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;

exports[`Avatar Sizes applies small correctly if provided 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar c-avatar--small fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  size="small"
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;

exports[`Avatar States applies borderless styling if provided 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar c-avatar--borderless fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;

exports[`Avatar States applies disabled styling if provided 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar is-disabled fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
  disabled={true}
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;

exports[`Avatar applies default styling correctly 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;

exports[`Avatar applies system styling correclty if provided 1`] = `
<figure
  className="Avatar-cDOgfv c-avatar c-avatar--system fgoDyb"
  data-garden-id="avatars.avatar"
  data-garden-version="version"
>
  <img
    alt="test"
    src="test"
  />
</figure>
`;
